<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/back"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="45sp"
        android:layout_gravity="center_horizontal"
        android:textColor="#5a2257"/>

    <Button
        android:id="@+id/kmtomilje"
        android:layout_height="50dp"
        android:text="@string/kotomilje" 
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:background="@drawable/buton_v5"
        android:layout_marginTop="10dp"
        android:onClick="hap_KmToMilje"/>
    <Button
        android:id="@+id/cf"
        android:layout_height="50dp"
        android:text="@string/CF" 
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:background="@drawable/buton_v5"
        android:layout_marginTop="10dp"
        android:onClick="hap_CelciusToFarenheit"/>
    <Button
        android:id="@+id/KgPound"
        android:layout_height="50dp"
        android:text="@string/KgPound" 
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:background="@drawable/buton_v5"
        android:layout_marginTop="10dp"
        android:onClick="hap_KgToPound"/>
    <Button
        android:id="@+id/InchToCentimetra"
        android:layout_height="50dp"
        android:text="@string/InchToCentimetra" 
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:background="@drawable/buton_v5"
        android:layout_marginTop="10dp"
        android:onClick="hap_InchToCentimeter"/>
    <Button
        android:id="@+id/MeterToFoot"
        android:layout_height="50dp"
        android:text="@string/MeterToFoot"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:background="@drawable/buton_v5"
        android:layout_marginTop="10dp"
        android:onClick="hap_MeterToFoot"/>
    <Button
        android:id="@+id/InchToFoot"
        android:layout_height="50dp"
        android:text="@string/InchToFoot" 
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:background="@drawable/buton_v5"
        android:layout_marginTop="10dp"
        android:onClick="hap_InchToFoot"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/autori"
        android:textSize="20sp"
        android:textColor="#ffd800"
        android:onClick="hap_AutorMenu"/>
    
</LinearLayout>
