<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#18504a" >

     <ImageView
        android:id="@+id/imageView1"
        android:layout_width="185dp"
        android:layout_height="200dp"
        android:src="@drawable/bledifoto" 
        android:contentDescription="@string/Autori_tjera"     
        android:layout_centerHorizontal="true"  
        android:padding="5dp" 
        android:background="#ffffff"/>

    <TextView
        android:id="@+id/emerA"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="10dp"
        android:text="@string/Autori_emri"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#e4e4e4" />

     <TextView
         android:id="@+id/mbiemerA"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/emerA"
         android:layout_marginBottom="30dp"
         android:layout_marginLeft="10dp"
         android:text="@string/Autori_mbiemri"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#e4e4e4" />

     <TextView
         android:id="@+id/emailA"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/mbiemerA"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:text="@string/Autori_email"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#e4e4e4" />
      <TextView
         android:id="@+id/dataA"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/emailA"
         android:layout_marginTop="30dp"
         android:layout_marginLeft="10dp"
         android:text="@string/Autori_viti"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#e4e4e4" />

      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true"
          android:layout_centerHorizontal="true"
          android:layout_marginBottom="16dp"
          android:text="@string/autori"
          android:textColor="#ffd800"
          android:textSize="20sp" />

</RelativeLayout>