<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CelciusToFarenheit"
    android:background="@drawable/app" >

    <TextView
        android:id="@+id/titulli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/CF"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/lexo"
        android:layout_width="wrap_content"
        android:layout_height="45sp"
        android:layout_centerHorizontal="true"
        android:background="#cfb6b6"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:inputType="number" 
        android:shadowColor="#858585"
        android:textSize="45sp">
    </EditText>


    <TextView
        android:id="@+id/dalja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lexo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/rezultati"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textSize="40sp"/>
     <Button
        android:id="@+id/Konverto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dalja"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buton_v4"
        android:textSize="30sp"
        android:text="@string/but_konverto" />

</RelativeLayout>